<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EcoMobile LIVE</string>
    <string name="database_name">Data Manager</string>
    <string name="label_nofiles">No files have been stored.</string>
    <string name="main_label_up_left">Collect Data</string>
    <string name="main_label_up_right">Manage Files</string>
    <string name="main_label_down_right">Visit EcoMapLIVE</string>
    <string name="main_label_down_left">Share your data</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_settings">Remember sensors</string>
    <string name="pref_savesensors">pref_savesensors</string>
    <string name="file_menu_delete">Delete</string>
    <string name="label_confirm_delete">Are you sure you want to delete the selected file?</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="label_menu_time">Set Time</string>
    <string name="file_menu_set_id">Set Id</string>
    <string name="file_menu_plot_data">Plot data</string>
    <string name="file_menu_map_data">Map data</string>
    <string name="plot_menu_reset">Reset zoom</string>
    <string name="plot_menu_screenshot">Export as image</string>
    <string name="plot_graph_name">Plot a Graph</string>
    <string name="plot_info_selectdata">Select data to plot</string>
    <string name="display_info_unavailable">Unavailable</string>
    <string name="display_info_details">Details</string>
    <string name="display_info_filename">File name: </string>
    <string name="display_info_sensortype">Sensor type used: </string>
    <string name="display_info_filesize">File size: </string>
    <string name="display_info_timestamp">Timestamp: </string>
    <string name="display_info_fileextension">File extension: </string>
    <string name="data_info_gas1">Gas #1</string>
    <string name="data_info_gas2">Gas #2</string>
    <string name="data_info_accelerometer">Accelerometer</string>
    <string name="data_info_accelerometer_displacement">Accelerometer displacement</string>
    <string name="data_info_light">Light levels</string>
    <string name="data_info_sound">Sound levels</string>
    <string name="data_info_temperature">Temperature</string>
    <string name="data_info_humidity">Humidity</string>
    <string name="data_info_gps">GPS positions</string>
    <string name="map_title">Map data</string>
    <string name="map_graph_name">Create a Map</string>
    <string name="map_info_selectdata">Select data to map</string>

    <!-- These are being used for 'collectdata' -->
    <string name="pref_sensors">pref_sensors</string>
    <string name="title_activity_device_area">Device Area</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_device_select">Select your device</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose_a_sensor">Choose a sensor</string>
    
    <!-- The about html text -->
    <string name="about_text">
<![CDATA[
<html>
 <head></head>
 <body>
    <small>
 	<b><i>Mobile Environmental Monitoring Project</b></i>
 	<br/>
 	<br/>
 	
 	<b>App Author:</b><br/> Victor Horta<br/>
    &nbsp&nbsp&nbsp vhorta@mit.edu<br/>
    &nbsp&nbsp&nbsp victorhorta@gmail.com<br/><br/>
    <b>Project Supervisor:</b><br/> Dr. Rich Fletcher<br/>
    &nbsp&nbsp&nbsp fletcher@media.mit.edu<br/>
    <p>&nbsp&nbsp&nbsp This app is designed for use with the Eco-Mini wearable environmental monitor.<br>
    &nbsp&nbsp&nbsp This device measures air quality (toxic gas levels), volatile organic compounds, 
    ambient sound level, RGB-IR light levels, temperature, humidity, and 3-axis 
    acceleration. The device contains a GPS module to record location data 
    and also contains a low-power bluetooth radio for streaming data to the phone.  
    Data is recorded on an internal memory card on the Eco-Mini device or can be 
    recorded and stored on the phone itself.</p>
    
    <p>&nbsp&nbsp&nbsp The EcoMobile application enables users to view live data from the Eco-Mini device and to control all the internal settings and calibration.</p>
    <br/>

    <b>About MIT Mobile Health Lab:</b><br/>
    <p>&nbsp&nbsp&nbsp The MIT Mobile Health Lab is directed by Dr. Rich Fletcher and creates a 
    variety of mobile phone peripherals that are used for environmental testing, 
    health monitoring, and diagnostic aids, primarily for use in public health and 
    global health.</p></small>
 </body>
</html>
]]>
    </string>

</resources>